code cleanup and JUnits added