@@ -1,7 +1,5 @@
 package com.minimalism.files.service.output;
 
-import java.util.stream.Collectors;
-
 import com.minimalism.files.domain.entities.InputEntity;
 import com.minimalism.shared.domain.Entity;
 import com.minimalism.shared.domain.Field;
@@ -16,10 +14,10 @@ public class EntityTransformer {
         returnValue.setFields(inputEntity.getFields().stream().map(ifield -> {
             Field f = new Field();
             f.setName(ifield.getName());
-            f.setDataType(ifield.getTypeName());
+            f.setDataType(ifield.getDataType());
             f.setValue(ifield.getValue());
             return f;
-        }).collect(Collectors.toList()));
+        }).toList());
         return returnValue;
     }
 }
